--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:reference]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-;lib_deps = tomstewart89/BasicLinearAlgebra@^5.1
+build_flags = -D REFERENCE
+src_filter = 
+    +<*>
+    -<measurement_firmware.cpp>
+
+[env:measure]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+build_flags = -D MEASURE
+src_filter = 
+    +<*>
+    -<reference_firmware.cpp>
