removed dependency to project mothership

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,9 @@ framework = arduino
 monitor_speed = 115200
 build_flags = -D REFERENCE
 src_filter = 
-    +<*>
-    -<measurement_firmware.cpp>
+	+<*>
+	-<measurement_firmware.cpp>
+lib_deps = tomstewart89/BasicLinearAlgebra@^5.1
 
 [env:measure]
 platform = espressif32
@@ -25,5 +26,6 @@ framework = arduino
 monitor_speed = 115200
 build_flags = -D MEASURE
 src_filter = 
-    +<*>
-    -<reference_firmware.cpp>
+	+<*>
+	-<reference_firmware.cpp>
+lib_deps = tomstewart89/BasicLinearAlgebra@^5.1
